src/process/build/log/idf_py_stderr_output_374838
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:224:17: error: size of array 'arr' has non-integer type
  224 |         uint8_t arr [ptrVal] = *rgb;
      |                 ^~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:224:32: error: invalid initializer
  224 |         uint8_t arr [ptrVal] = *rgb;
      |                                ^
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:224:17: warning: unused variable 'arr' [-Wunused-variable]
  224 |         uint8_t arr [ptrVal] = *rgb;
      |                 ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4739: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
